# WGIBDscan

./: .gitignore  LICENSE  environment.yml  pyproject.toml  requirements.txt
WGIBDscan/: WGIBDScan.py  main.py
WGIBDscan/callbacks/: __init__.py  callbacks.py
WGIBDscan/colors/: colors.py
WGIBDscan/ersa_search/: __init__.py  ersa.py  get_grids.py
WGIBDscan/search_ibd_files/: __init__.py  search_segments.py  writer.py
